--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8070
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sbms?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://mysqldb:3306/sbms?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
