--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,38 @@
 version: '3.8'
+
 services:
   mysqldb:
     image: mysql:8.0
     container_name: mysqldb
     ports:
-      - "3306:3306"
+      - "3307:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=sbms
     volumes:
-      - ./mysql-data:/var/lib/mysql
+      - mysql_data:/var/lib/mysql
     networks:
       - spring-boot-db-net
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   application:
     image: spring-boot-mysql-docker-compose
     container_name: spring-boot-mysql-docker-compose
     ports:
-      - "8080:8070"  # Host:Container
+      - "8070:8070"
     depends_on:
-      - mysqldb
+      mysqldb:
+        condition: service_healthy
     networks:
       - spring-boot-db-net
 
 networks:
   spring-boot-db-net:
     driver: bridge
+
+volumes:
+  mysql_data:
